<resources>
    <string name="app_name">Resume</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="first_name">Pierre</string>
    <string name="last_name">Binauld</string>
    <string name="email">pierre.binauld@gmail.com</string>

    <string name="opened_drawer_content_desc">Drawer opened.</string>
    <string name="closed_drawer_content_desc">Drawer closed.</string>
    <string name="drawer_header_picture_content_description">Picture for the current account.</string>
    <string name="drawer_header_background_content_description">Picture for the current wallpaper account.</string>

    <string name="nav_item_education">Education</string>
    <string name="nav_item_skills">Skills</string>
    <string name="nav_item_tech_skills">Technical Skills</string>
    <string name="nav_item_experiences">Experiences</string>
    <string name="nav_item_misc">Miscellaneous</string>

    <string name="message_error_no_web_page">No web page available</string>
    <string name="message_error_no_location">No location available</string>

    <string name="experience_date_range_start">Start</string>
    <string name="experience_date_range_end">End</string>

    <string name="education_date_range_end">Graduated</string>

</resources>
